--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ defusedxml==0.7.1
 Flask==2.0.2
 Flask-SQLAlchemy==2.5.1
 greenlet==1.1.2
+gunicorn==20.0.4
 httpie==2.5.0
 importlib-metadata==4.8.1
 itsdangerous==2.0.1
