--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ defusedxml==0.7.1
 Flask==2.0.2
 Flask-SQLAlchemy==2.5.1
 greenlet==1.1.2
-gunicorn==20.0.4
+gunicorn==20.1.0
 httpie==2.5.0
 importlib-metadata==4.8.1
 itsdangerous==2.0.1
@@ -18,3 +18,5 @@ SQLAlchemy==1.4.25
 typing-extensions==3.10.0.2
 Werkzeug==2.0.2
 zipp==3.6.0
+
+requests~=2.26.0
