--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ certifi==2021.5.30
 click==8.0.3
 defusedxml==0.7.1
 Flask==2.0.2
+Flask-HTTPAuth==4.4.0
 Flask-SQLAlchemy==2.5.1
 greenlet==1.1.2
 gunicorn==20.1.0
